crates/compiler/semantic/tests/snapshots/diagnostics__scoping::scope_visibility::test_if_statement_scope.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::scope_visibility::test_if_statement_scope"
---
Fixture: semantic_tests::scoping::scope_visibility::test_if_statement_scope
============================================================
Source code:

        fn test() {
            if (true) {
                let if_var = 42;
            }
            let bad = if_var; // Error: if_var not visible outside if
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'if_var'
   ╭─[ semantic_tests::scoping::scope_visibility::test_if_statement_scope:6:23 ]
   │
 6 │             let bad = if_var; // Error: if_var not visible outside if
   │                       ───┬──  
   │                          ╰──── Undeclared variable 'if_var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::scoping::scope_visibility::test_if_statement_scope:2:12 ]
   │
 2 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
