crates/compiler/semantic/tests/snapshots/diagnostics__scoping::scope_visibility::test_inner_scope_not_visible_outside.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::scope_visibility::test_inner_scope_not_visible_outside"
---
Fixture: semantic_tests::scoping::scope_visibility::test_inner_scope_not_visible_outside
============================================================
Source code:

        func test() {
            {
                let inner = 42;
            }
            let bad = inner; // Error: inner not visible
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'inner'
   ╭─[ semantic_tests::scoping::scope_visibility::test_inner_scope_not_visible_outside:6:23 ]
   │
 6 │             let bad = inner; // Error: inner not visible
   │                       ──┬──  
   │                         ╰──── Undeclared variable 'inner'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::scoping::scope_visibility::test_inner_scope_not_visible_outside:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
