crates/compiler/semantic/tests/snapshots/diagnostics__scoping::scope_visibility::test_sibling_scopes_not_visible.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::scope_visibility::test_sibling_scopes_not_visible"
---
Fixture: semantic_tests::scoping::scope_visibility::test_sibling_scopes_not_visible
============================================================
Source code:

        func test() {
            {
                let first_scope = 1;
            }
            {
                let second_scope = first_scope; // Error: not visible
            }
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'first_scope'
   ╭─[ semantic_tests::scoping::scope_visibility::test_sibling_scopes_not_visible:7:36 ]
   │
 7 │                 let second_scope = first_scope; // Error: not visible
   │                                    ─────┬─────  
   │                                         ╰─────── Undeclared variable 'first_scope'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::scoping::scope_visibility::test_sibling_scopes_not_visible:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
