crates/compiler/semantic/tests/snapshots/diagnostics__scoping::undeclared_variables::test_multiple_undeclared_variables.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::undeclared_variables::test_multiple_undeclared_variables"
---
Fixture: semantic_tests::scoping::undeclared_variables::test_multiple_undeclared_variables
============================================================
Source code:

        fn test() {
            let x = first_undefined;
            let y = second_undefined;
            let z = x + y + third_undefined;
        }
    
============================================================
Found 4 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'first_undefined'
   ╭─[ semantic_tests::scoping::undeclared_variables::test_multiple_undeclared_variables:3:21 ]
   │
 3 │             let x = first_undefined;
   │                     ───────┬───────  
   │                            ╰───────── Undeclared variable 'first_undefined'
───╯

--- Diagnostic 2 ---
[1001] Error: Undeclared variable 'second_undefined'
   ╭─[ semantic_tests::scoping::undeclared_variables::test_multiple_undeclared_variables:4:21 ]
   │
 4 │             let y = second_undefined;
   │                     ────────┬───────  
   │                             ╰───────── Undeclared variable 'second_undefined'
───╯

--- Diagnostic 3 ---
[1001] Error: Undeclared variable 'third_undefined'
   ╭─[ semantic_tests::scoping::undeclared_variables::test_multiple_undeclared_variables:5:29 ]
   │
 5 │             let z = x + y + third_undefined;
   │                             ───────┬───────  
   │                                    ╰───────── Undeclared variable 'third_undefined'
───╯

--- Diagnostic 4 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::scoping::undeclared_variables::test_multiple_undeclared_variables:2:12 ]
   │
 2 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
