crates/compiler/semantic/tests/snapshots/diagnostics__scoping::undeclared_variables::test_simple_undeclared_variable.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::undeclared_variables::test_simple_undeclared_variable"
---
Fixture: semantic_tests::scoping::undeclared_variables::test_simple_undeclared_variable
============================================================
Source code:

        func test() {
            let x = undefined_var;
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ semantic_tests::scoping::undeclared_variables::test_simple_undeclared_variable:3:21 ]
   │
 3 │             let x = undefined_var;
   │                     ──────┬──────  
   │                           ╰──────── Undeclared variable 'undefined_var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::scoping::undeclared_variables::test_simple_undeclared_variable:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
