crates/compiler/semantic/tests/snapshots/diagnostics__scoping::undeclared_variables::test_undeclared_in_expression.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::undeclared_variables::test_undeclared_in_expression"
---
Fixture: semantic_tests::scoping::undeclared_variables::test_undeclared_in_expression
============================================================
Source code:

        fn test() {
            let x = 5;
            let y = x + undefined_var;
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ semantic_tests::scoping::undeclared_variables::test_undeclared_in_expression:4:25 ]
   │
 4 │             let y = x + undefined_var;
   │                         ──────┬──────  
   │                               ╰──────── Undeclared variable 'undefined_var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::scoping::undeclared_variables::test_undeclared_in_expression:2:12 ]
   │
 2 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
