crates/compiler/semantic/tests/snapshots/diagnostics__scoping::undeclared_variables::test_undeclared_in_return.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::undeclared_variables::test_undeclared_in_return"
---
Fixture: semantic_tests::scoping::undeclared_variables::test_undeclared_in_return
============================================================
Source code:

        fn test() -> felt {
            return undefined_var;
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ semantic_tests::scoping::undeclared_variables::test_undeclared_in_return:3:20 ]
   │
 3 │             return undefined_var;
   │                    ──────┬──────  
   │                          ╰──────── Undeclared variable 'undefined_var'
───╯
