crates/compiler/semantic/tests/snapshots/diagnostics__scoping::unused_variables::test_mixed_used_and_unused.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::unused_variables::test_mixed_used_and_unused"
---
Fixture: semantic_tests::scoping::unused_variables::test_mixed_used_and_unused
============================================================
Source code:

        func test() -> felt {
            let used = 10;
            let unused = 20;
            return used;
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'unused'
   ╭─[ semantic_tests::scoping::unused_variables::test_mixed_used_and_unused:4:17 ]
   │
 4 │             let unused = 20;
   │                 ───┬──  
   │                    ╰──── Unused variable 'unused'
───╯
