crates/compiler/semantic/tests/snapshots/diagnostics__scoping::unused_variables::test_multiple_unused_variables.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::unused_variables::test_multiple_unused_variables"
---
Fixture: semantic_tests::scoping::unused_variables::test_multiple_unused_variables
============================================================
Source code:

        fn test() {
            let unused1 = 10;
            let unused2 = 20;
            let unused3 = 30;
            return ();
        }
    
============================================================
Found 3 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'unused1'
   ╭─[ semantic_tests::scoping::unused_variables::test_multiple_unused_variables:3:17 ]
   │
 3 │             let unused1 = 10;
   │                 ───┬───  
   │                    ╰───── Unused variable 'unused1'
───╯

--- Diagnostic 2 ---
[1002] Warning: Unused variable 'unused2'
   ╭─[ semantic_tests::scoping::unused_variables::test_multiple_unused_variables:4:17 ]
   │
 4 │             let unused2 = 20;
   │                 ───┬───  
   │                    ╰───── Unused variable 'unused2'
───╯

--- Diagnostic 3 ---
[1002] Warning: Unused variable 'unused3'
   ╭─[ semantic_tests::scoping::unused_variables::test_multiple_unused_variables:5:17 ]
   │
 5 │             let unused3 = 30;
   │                 ───┬───  
   │                    ╰───── Unused variable 'unused3'
───╯
